# money-system

./: README.md  pyproject.toml
docs/: flows.csv  index.html  metrics.csv  stocks.csv
scripts/: build_site.py  run_sim.py
src/money_system/: __init__.py  config.py  flows.py  interactive.py  ledger.py  model.py  plotting.py
