[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "money-system"
version = "0.1.0"
description = "Stock-flow consistent money system simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["src"]
